Fix missing logo in footer on mobile screen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -856,6 +856,10 @@ video {
   margin-top: auto;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -986,6 +990,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .max-w-2xl {
